--- a/src/component/BlogPage/scss/blogPage.scss
+++ b/src/component/BlogPage/scss/blogPage.scss
@@ -105,18 +105,35 @@
     height: 500px;
     background: url("./../images/b.png") no-repeat top center;
     background-size: cover;
+    .blogPage-banner-text {
+      width: 700px;
+      margin-left: 135px;
+      // margin: 0 auto;
+      padding-top: 140px;
+      .blogPage-banner_big {
+        font-family: 'Fedra Sans',sans-serif;
+        font-weight: 700;
+        font-variant-alternates: stylistic(1);
+        font-size: 2.5rem;
+        color: #fff;
+      }
+      .blogPage-banner_small {
+        font-size: 1.2rem;
+        color: rgba(255, 255, 255, 0.5);
+      }
+    }
   }
   .blogPage-content {
     width: 100%;
     background-color: #f1f1f1;
-    padding-top: 20px;
+    // padding-top: 20px;
     padding-bottom: 20px;
 
     .blogPage-block {
       width: 1200px;
-      height: 200px;
+      // height: 200px;
       margin: 0 auto;
-      background-color: #fff;
+      // background-color: #fff;
     }
   }
 }
