--- a/src/component/BlogPage/scss/blogPage.scss
+++ b/src/component/BlogPage/scss/blogPage.scss
@@ -125,15 +125,12 @@
   }
   .blogPage-content {
     width: 100%;
-    background-color: #f1f1f1;
-    // padding-top: 20px;
+    // background-color: #dee3e7;
     padding-bottom: 20px;
 
     .blogPage-block {
       width: 1200px;
-      // height: 200px;
       margin: 0 auto;
-      // background-color: #fff;
     }
   }
 }
