--- a/src/component/IndexPage/scss/indexPage.scss
+++ b/src/component/IndexPage/scss/indexPage.scss
@@ -38,6 +38,8 @@
         font-size: 12px;
         cursor: pointer;
         transition: all 0.2s;
+        text-decoration: none;
+        color: #fff;
         &:hover {
           background: #fff;
           color: #35abbc;
