--- a/src/component/MyBlog/scss/myBlog.scss
+++ b/src/component/MyBlog/scss/myBlog.scss
@@ -1,12 +1,11 @@
 .myBlog {
-  overflow: hidden;
-  .myBlog-left {
-    width: 880px;
-    float: left;
-    padding: 20px;
-  }
-  .myBlog-right {
-    width: 280px;
-    float: right;
+  width: 100%;
+  margin-top: 20px;
+  .myBlog-main {
+    min-width: 1200px;
+    // float: left;
+    // padding: 20px;
+    margin: 20px auto 0;
+    position: relative;
   }
 }
