--- a/src/component/BlogPage/scss/blogPage.scss
+++ b/src/component/BlogPage/scss/blogPage.scss
@@ -1,6 +1,6 @@
 .blogPage {
   width: 100%;
-  min-width: 1000px;
+  min-width: 1200px;
   position: relative;
 
   .blogPage-banner {
@@ -12,17 +12,21 @@
       width: 700px;
       margin-left: 135px;
       // margin: 0 auto;
-      padding-top: 140px;
+      padding-top: 70px;
       .blogPage-banner_big {
-        font-family: 'Fedra Sans',sans-serif;
+        font-family: FedraSans;
         font-weight: 700;
+        line-height: 1;
         font-variant-alternates: stylistic(1);
-        font-size: 2.5rem;
+        font-size: 3em;
         color: #fff;
+        padding-top: 20px;;
       }
       .blogPage-banner_small {
+        font-family: Apercu;
         font-size: 1.2rem;
-        color: rgba(255, 255, 255, 0.5);
+        color: rgba(255, 255, 255, 0.8);
+        padding: 0.5em 0 1em;
       }
     }
   }
@@ -35,19 +39,5 @@
       width: 1200px;
       margin: 0 auto;
     }
-  }
-}
-
-@keyframes waterWave {
-  0% {
-    transform: scale(0.8) rotate(0deg);
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    transform: scale(2) rotate(360deg);
-    opacity: 0;
   }
 }
