--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -1,13 +1,14 @@
 .blogItemPage {
-  width: 240px;
+  width: 300px;
   padding: 5px;
   background-color: #fff;
   float: left;
+  box-sizing: border-box;
   .blogItemPage-main {
     padding: 5px;
     border: 1px solid #b6b6b6;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #b6b6b6;
+    // border-radius: 5px;
+    // box-shadow: 0 0 5px #b6b6b6;
     .blogItemPage_img {
       width: 100%;
       height: 120px;
@@ -16,6 +17,7 @@
       h1 {
         padding-top: 20px;
         text-align: center;
+        font-size: 18px;
       }
       p {
         padding: 5px 10px;
