--- a/src/component/Header/scss/header.scss
+++ b/src/component/Header/scss/header.scss
@@ -94,7 +94,7 @@
           width: 100%;
           height: 100%;
         }
-        &::before {
+        /*&::before {
           position: absolute;
           content: "";
           border-radius: 50%;
@@ -104,7 +104,7 @@
           right: 0; 
           top: 0;
           bottom: 0;
-          animation: waterWave 4s ease-out 2s infinite;
+          // animation: waterWave 4s ease-out 2s infinite;
           border: 1px solid #333;
           box-shadow: 0 0 2px #333;
         }
@@ -118,10 +118,10 @@
           right: 0;
           top: 0;
           bottom: 0;
-          animation: waterWave 4s ease-out infinite;
+          // animation: waterWave 4s ease-out infinite;
           border: 1px solid #333;
           box-shadow: 0 0 2px #333;
-        }
+        }*/
       }
     }
   }
