--- a/src/component/Comment/scss/message.scss
+++ b/src/component/Comment/scss/message.scss
@@ -12,6 +12,8 @@
       background-color: blue;
       float: left;
       margin-right: 10px;
+      background: url("./../images/QQ.png") no-repeat center center;
+      background-size: cover;
     }
     .messagePage-user-info {
       .messagePage-user-info-name {
