--- a/src/component/Comment/scss/comment.scss
+++ b/src/component/Comment/scss/comment.scss
@@ -1,6 +1,7 @@
 .commentPage {
   width: 100%;
   min-width: 1200px;
+  background-color: #f4f4f4;
   .commentPage-banner {
     width: 100%;
     min-width: 1200px;
@@ -8,6 +9,8 @@
     background: red;
     background-size: contain;
     position: relative;
+    background: url("./../images/banner.jpg") no-repeat center center;
+    background-size: cover;
     .commentPage-chat {
       position: absolute;
       top: 20%;
@@ -74,6 +77,7 @@
     width: 100%;
     min-width: 1200px;
     background-color: #f4f4f4;
+    margin-top: 20px;
     .commentPage-content {
       width: 1200px;
       background-color: #fff;
@@ -82,10 +86,13 @@
       .commentPage-content-l {
         width: 800px;
         float: left;
+        padding-top: 20px;
       }
       .commentPage-content-r {
-
-      }
+        float: right;
+        padding-top: 20px;
+        padding-right: 20px;
+      } 
     }
   }
 }
