--- a/src/component/Comment/scss/comment.scss
+++ b/src/component/Comment/scss/comment.scss
@@ -27,8 +27,13 @@
         .commentPage-chat-avatar {
           width: 40px;
           height: 40px;
-          background-color: #ccc;
+          // background-color: #ccc;
           float: left;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+          }
         }
         .commentPage-chat-input {
           position: relative;
@@ -49,6 +54,7 @@
             transform: rotate(45deg);
           }
           textarea {
+            box-sizing: border-box;
             width: 100%;
             height: 80px;
             resize: none;
@@ -56,6 +62,7 @@
             outline: none;
             font-size: 16px;
             color: #333;
+            padding: 10px;
           }
         }
         .commentPage-chat-sub {
