--- a/src/component/Hero/scss/heroItem.scss
+++ b/src/component/Hero/scss/heroItem.scss
@@ -15,6 +15,11 @@
     background-color: #ccc;
     float: left;
     margin: 15px 0 0 25px;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
   }
   .nickname {
     padding: 15px 10px 15px 100px;
