--- a/src/component/Comment/scss/comment.scss
+++ b/src/component/Comment/scss/comment.scss
@@ -90,6 +90,7 @@
       background-color: #fff;
       overflow: hidden;
       margin: 0 auto;
+      padding-bottom: 20px;
       .commentPage-content-l {
         width: 800px;
         float: left;
