--- a/src/component/Comment/scss/message.scss
+++ b/src/component/Comment/scss/message.scss
@@ -3,6 +3,10 @@
   padding: 15px 25px;
   margin-bottom: 20px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
+  transition: all 0.5s;
+  &:hover {
+    transform: translate(2px , -2px);
+  }
   .messagePage-user {
     overflow: hidden;
     .messagePage-user-avatar {
