--- a/src/component/IndexPage/scss/indexPage.scss
+++ b/src/component/IndexPage/scss/indexPage.scss
@@ -1,7 +1,7 @@
 .indexPage {
   width: 100%;
   height: 100%;
-  background: url("./../images/player.jpg") no-repeat top center;
+  background: url("./../images/banner.jpg") no-repeat top center;
   background-size: cover; 
   position: relative;
   .indexPage_cover {
