--- a/src/component/AboutMe/scss/about.scss
+++ b/src/component/AboutMe/scss/about.scss
@@ -5,6 +5,7 @@
   .aboutPage-banner-fixed {
     position: fixed;
     width: 100%;
+    height: 100%;
     min-width: 1200px;
     // height: 500px;
     background: url("./../images/comment-banner.jpg") no-repeat center center;
@@ -89,6 +90,7 @@
       min-width: 1200px;
       background-color: rgba(241,241,241,0.6);
       padding: 20px;
+      box-sizing: border-box;
       .aboutPage-main-content-me {
         margin: 0 auto;
         background-color: #fff;
