--- a/src/component/Comment/scss/github.scss
+++ b/src/component/Comment/scss/github.scss
@@ -43,6 +43,10 @@
       background: -o-linear-gradient(top,#fa7d3c 0,#f55f10 100%);
       background: -ms-linear-gradient(top,#fa7d3c 0,#f55f10 100%);
       background: linear-gradient(top bottom,#fa7d3c 0,#f55f10);
+      a{
+        color: #fff;
+        text-decoration: none;
+      }
     }
   }
   .github-foot {
