--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
-  background-color: #f4f4f4;
+  /* background-color: #f0f3f5; */
+  
 }
 
 #root {
