--- a/src/component/Comment/scss/comment.scss
+++ b/src/component/Comment/scss/comment.scss
@@ -50,12 +50,13 @@
           }
           textarea {
             width: 100%;
-            height: 80px;
+            height: 60px;
             resize: none;
             border: 1px solid #ccc;
             outline: none;
             font-size: 16px;
             color: #333;
+            padding: 10px;
           }
         }
         .commentPage-chat-sub {
