--- a/src/component/MyBlog/scss/myBlog.scss
+++ b/src/component/MyBlog/scss/myBlog.scss
@@ -1,10 +1,8 @@
 .myBlog {
   width: 100%;
-  margin-top: 20px;
+  padding-top: 10px;
   .myBlog-main {
     min-width: 1200px;
-    // float: left;
-    // padding: 20px;
     margin: 20px auto 0;
     position: relative;
   }
