--- a/src/page/Comment/scss/github.scss
+++ b/src/page/Comment/scss/github.scss
@@ -42,7 +42,7 @@
       background: -webkit-linear-gradient(top,#fa7d3c,#f55f10);
       background: -o-linear-gradient(top,#fa7d3c 0,#f55f10 100%);
       background: -ms-linear-gradient(top,#fa7d3c 0,#f55f10 100%);
-      background: linear-gradient(top bottom,#fa7d3c 0,#f55f10);
+      background: linear-gradient(top,#fa7d3c 0,#f55f10);
       a{
         color: #fff;
         text-decoration: none;
