--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,20 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
-  /* background-color: #f0f3f5; */
-  
 }
 
 #root {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   min-width: 1200px;
   margin: 0 auto;
-  box-sizing: border-box;
+  box-sizing: border-box; 
+  /* overflow: auto; */
 }
 
 ul {
