--- a/src/page/AboutMe/scss/about.scss
+++ b/src/page/AboutMe/scss/about.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   min-width: 1200px;
   .aboutPage-banner-fixed {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     min-width: 1200px;
