--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -3,6 +3,7 @@
   padding: 5px;
   float: left;
   box-sizing: border-box;
+  animation: fadeInLeft;
   .blogItemPage-main {
     padding: 5px;
     background-color: #fff;
@@ -68,10 +69,10 @@
 @keyframes fadeInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-20px)
+    // transform: translateX(-20px)
   }
   100% {
     opacity: 1;
-    transform: translateX(0px)
+    // transform: translateX(0px)
   }
 }
