--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -3,6 +3,7 @@
   padding: 5px;
   float: left;
   box-sizing: border-box;
+  background-color: #ccc;
   .blogItemPage-main {
     padding: 5px;
     background-color: #fff;
