--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -17,6 +17,7 @@
         padding-top: 20px;
         text-align: center;
         font-size: 18px;
+        font-weight: normal;
       }
       p {
         padding: 5px 10px;
