--- a/src/page/BlogPage/scss/blogPage.scss
+++ b/src/page/BlogPage/scss/blogPage.scss
@@ -46,6 +46,7 @@
       .blogPage-content {
         width: 100%;
         padding-bottom: 20px;
+        background-color: #dee3e7;
         .blogPage-block {
           width: 1200px;
           margin: 0 auto;
