--- a/src/component/App/scss/app.scss
+++ b/src/component/App/scss/app.scss
@@ -1,6 +1,6 @@
 .app {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   .transitionWrapper-enter-active {
     animation: shadeIn 1.5s linear forwards;
   }
@@ -10,8 +10,8 @@
   }
 
   .transitionWrapper {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     position: relative;
   }
 
