--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -3,7 +3,13 @@
   padding: 5px;
   float: left;
   box-sizing: border-box;
-  animation: fadeInLeft;
+  transition: all 0.5s;
+  animation: fadeInLeft 0.5 ease;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 5px 10px 10px -5px rgba(0,0,0,.2);
+    transition: box-shadow 0.3s ease-in-out;
+  }
   .blogItemPage-main {
     padding: 5px;
     background-color: #fff;
@@ -67,13 +73,20 @@
   }
 }
 
-@keyframes fadeInLeft {
-  0% {
-    opacity: 0;
-    // transform: translateX(-20px)
-  }
-  100% {
-    opacity: 1;
-    // transform: translateX(0px)
-  }
+.tabs-wrap-enter {
+  opacity: 0.01;
+}
+ 
+.tabs-wrap-enter.tabs-wrap-enter-active {
+  opacity: 1;
+  transition: all 500ms ease-in;
+}
+ 
+.tabs-wrap-leave {
+  opacity: 1; 
+}
+ 
+.tabs-wrap-leave.tabs-wrap-leave-active {  
+  opacity: 0.01;
+  transition: all 500ms ease-in;
 }
