--- a/src/page/AboutMe/scss/about.scss
+++ b/src/page/AboutMe/scss/about.scss
@@ -1,11 +1,13 @@
 .aboutPage {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
-  min-width: 1200px;
+  // min-width: 1200px;
+  overflow: auto;
   .aboutPage-banner-fixed {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     min-width: 1200px;
     // height: 500px;
     background: url("./../images/comment-banner.jpg") no-repeat center center;
@@ -17,7 +19,7 @@
     z-index: -50;
   }
   .aboutPage-main {
-    width: 100%;
+    // width: 100%;
     min-width: 1200px;
     margin: 0 auto;
     .aboutPage-main-header {
