--- a/src/page/IndexPage/scss/indexPage.scss
+++ b/src/page/IndexPage/scss/indexPage.scss
@@ -1,6 +1,6 @@
 .indexPage {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: url("./../images/banner.jpg") no-repeat top center;
   background-size: cover; 
   position: relative;
