--- a/src/page/BlogPage/scss/blogPage.scss
+++ b/src/page/BlogPage/scss/blogPage.scss
@@ -16,7 +16,7 @@
       .blogPage-banner {
         width: 100%;
         height: 420px;
-        background: url("./../images/b.png") no-repeat top center;
+        background: url("./../images/pano.jpg") no-repeat center center;
         background-size: cover;
 
         .blogPage-banner-text {
