--- a/src/component/Footer/scss/footer.scss
+++ b/src/component/Footer/scss/footer.scss
@@ -2,5 +2,55 @@
   position: relative;
   width: 100%;
   height: 200px;
-  background-color: #000;
+  background-color: #333;
+  padding: 30px 0;
+
+  h3 {
+    margin-bottom: .4em;
+    line-height: 1.5;
+    font-size: 20px;
+    font-weight: 400;
+    color: #888;
+  }
+  .footer-left {
+    width: 50%;
+    float: left;
+    padding: 0 10px;
+    color: #888;
+    p{
+      font-size: 14px;
+    }
+  }
+  .footer-mid {
+    width: 25%;
+    float: left;
+    padding: 0 10px;
+    ul {
+      li{
+        margin-top: 5px;
+        a {
+          color: #888;
+          text-decoration: none;
+          font-size: 14px;
+          &:hover {
+            color: #fff;
+            text-decoration: underline;
+            transition: all 0.5s;
+          }
+        }
+      }
+    }
+  }
+  .footer-right {
+    float: left;
+    padding: 0 10px;
+    a {
+      color: #888;
+      font-size: 30px;
+      &:hover {
+        color: #fff;
+        transition: all 0.5s;
+      }
+    }
+  }
 }
