--- a/src/page/Artical/scss/articalPage.scss
+++ b/src/page/Artical/scss/articalPage.scss
@@ -21,7 +21,7 @@
             font-size: 2em;
           }
           h3 {
-            width: 50%;
+            // width: 50%;
             color: #fff;
             opacity: 0.8;
           }
