--- a/src/component/Footer/scss/footer.scss
+++ b/src/component/Footer/scss/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   width: 100%;
-  height: 200px;
+  // height: 200px;
   background-color: #333;
   padding: 30px 0;
 
@@ -52,5 +52,14 @@
         transition: all 0.5s;
       }
     }
+  }
+  .design {
+    // margin-top: 20px;
+    border-top: 1px solid #444;
+    padding-top: 30px;
+    padding: 30px 15px 0;
+    color: #888;
+    text-align: center;
+    font-size: 14px;
   }
 }
