--- a/src/page/Artical/scss/articalPage.scss
+++ b/src/page/Artical/scss/articalPage.scss
@@ -3,7 +3,7 @@
   .articalPage-main {
     padding: 70px 0;
     .articalPage-content {
-      max-width: 1200px;
+      // max-width: 1200px;
       margin: 0 auto;
       background: #fff;
       .articalPage-content-banner {
