--- a/src/page/Comment/scss/comment.scss
+++ b/src/page/Comment/scss/comment.scss
@@ -4,7 +4,7 @@
   background-color: #f4f4f4;
   .commentPage-banner {
     width: 100%;
-    min-width: 1200px;
+    // min-width: 1200px;
     height: 500px;
     background: red;
     background-size: contain;
@@ -82,11 +82,11 @@
   }
   .commentPage-main {
     width: 100%;
-    min-width: 1200px;
+    // min-width: 1200px;
     background-color: #f4f4f4;
     margin-top: 20px;
     .commentPage-content {
-      width: 1200px;
+      // width: 1200px;
       background-color: #fff;
       overflow: hidden;
       margin: 0 auto;
