--- a/src/component/Header/scss/header.scss
+++ b/src/component/Header/scss/header.scss
@@ -2,29 +2,74 @@
   .header-nav {
     width: 100%;
     height: 60px;
-    min-width: 1000px;
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
     z-index: 1;
+
+    .header-bar {
+      position: absolute;
+      right: 10px;
+      top: 5px;
+      color: #333;
+      font-size: 26px;
+      padding: 5px 10px 0;
+      font-weight: bold;
+      border-radius: 5px;
+      background-color: #fff;
+      text-align: center;
+      cursor: pointer;
+      box-shadow: 1px 1px 4px rgba(0, 0, 0, .2);
+      z-index: 2;
+      transition: all 0.5s;
+    }
+
+    .nav-mask {
+      position: fixed;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      z-index: 1;
+      background-color: rgba(255, 255, 255, 0.5);
+
+      .nav-mask-list {
+        background-color: #fff;
+        box-shadow: 0 0 5px #333;
+        transition: all 0.4s;
+
+        a {
+          display: block;
+          margin-right: 1em;
+          border-bottom: 2px solid #fff;
+          line-height: 25px;
+          color: #333;
+          text-align: center;
+          font-size: 14px;
+          transition: all .2s linear;
+          text-decoration: none;
+        }
+      }
+    }
   }
+
   .headerPage {
     height: 60px;
     width: 100%;
-    min-width: 1000px;
     position: fixed;
     left: 0;
     top: -60px;
     right: 0;
     z-index: 9;
     transition: all 0.3s;
-    background-color: rgba(255,255,255,0.9);
-    box-shadow: 0 0 5px rgba(0,0,0,.4);
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .4);
+
     .headerPage-header {
-      width: 1000px;
       height: 60px;
       margin: 0 auto;
+
       .headerPage-header_list {
         li {
           line-height: 60px;
@@ -34,34 +79,42 @@
           padding: 0 20px;
           position: relative;
           cursor: default;
+
           a {
             text-decoration: none;
             color: #333;
           }
+
           &:nth-of-type(1) {
             background: url("./../images/index.png") no-repeat left center;
             background-size: 16px;
           }
+
           &:nth-of-type(2) {
             background: url("./../images/blog.png") no-repeat left center;
             background-size: 16px;
           }
+
           &:nth-of-type(3) {
             background: url("./../images/cc-plane.png") no-repeat left center;
             background-size: 16px;
           }
+
           &:nth-of-type(4) {
             background: url("./../images/resource.png") no-repeat left center;
             background-size: 16px;
           }
+
           &:nth-of-type(5) {
             background: url("./../images/comment.png") no-repeat left center;
             background-size: 16px;
           }
+
           &:nth-of-type(6) {
             background: url("./../images/link.png") no-repeat left center;
             background-size: 16px;
           }
+
           span {
             display: block;
             position: absolute;
@@ -69,10 +122,11 @@
             left: 0;
             bottom: 0;
             border-bottom: 3px solid #333;
-            transition: width 350ms,left 350ms; 
+            transition: width 350ms, left 350ms;
             box-sizing: border-box;
           }
-          &:hover span{
+
+          &:hover span {
             position: absolute;
             width: 100%;
             left: 0;
@@ -80,6 +134,7 @@
           }
         }
       }
+
       .headerPage-header-avatar {
         float: right;
         width: 40px;
@@ -90,51 +145,23 @@
         border: 1px solid #333;
         box-shadow: 0 0 2px #333;
         position: relative;
+
         img {
           width: 100%;
           height: 100%;
         }
-        /*&::before {
-          position: absolute;
-          content: "";
-          border-radius: 50%;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          right: 0; 
-          top: 0;
-          bottom: 0;
-          // animation: waterWave 4s ease-out 2s infinite;
-          border: 1px solid #333;
-          box-shadow: 0 0 2px #333;
-        }
-        &::after {
-          position: absolute;
-          content: "";
-          border-radius: 50%;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          right: 0;
-          top: 0;
-          bottom: 0;
-          // animation: waterWave 4s ease-out infinite;
-          border: 1px solid #333;
-          box-shadow: 0 0 2px #333;
-        }*/
       }
     }
   }
-  @keyframes waterWave {
+
+  @keyframes sliderDown {
     0% {
-      transform: scale(0.8) rotate(0deg);
+      height: 0;
       opacity: 0;
     }
-    50% {
-      opacity: 0.5;
-    }
+
     100% {
-      transform: scale(1.6) rotate(360deg);
+      height: auto;
       opacity: 0;
     }
   }
