--- a/src/component/MyBlog/scss/myBlog.scss
+++ b/src/component/MyBlog/scss/myBlog.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding-top: 10px;
   .myBlog-main {
-    min-width: 1200px;
+    width: 100%;
     margin: 20px auto 0;
     position: relative;
   }
