--- a/src/page/AboutMe/scss/about.scss
+++ b/src/page/AboutMe/scss/about.scss
@@ -8,7 +8,7 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
-    min-width: 1200px;
+    // min-width: 1200px;
     // height: 500px;
     background: url("./../images/comment-banner.jpg") no-repeat center center;
     background-size: cover;
@@ -20,12 +20,12 @@
   }
   .aboutPage-main {
     // width: 100%;
-    min-width: 1200px;
+    // min-width: 1200px;
     margin: 0 auto;
     .aboutPage-main-header {
       width: 100%;
       height: 500px;
-      min-width: 1200px;
+      // min-width: 1200px;
       background-color: rgba(0,0,0,0.7);
       position: relative;
       .aboutPage-main-header_content {
@@ -89,7 +89,7 @@
     }
     .aboutPage-main-content {
       width: 100%;
-      min-width: 1200px;
+      // min-width: 1200px;
       background-color: rgba(241,241,241,0.6);
       padding: 20px;
       box-sizing: border-box;
