--- a/src/page/BlogPage/scss/blogPage.scss
+++ b/src/page/BlogPage/scss/blogPage.scss
@@ -1,7 +1,6 @@
 .blogPage {
   width: 100%;
   height: 100%;
-  min-width: 1200px;
   position: relative;
 
   .blogPage-main {
@@ -15,15 +14,13 @@
 
       .blogPage-banner {
         width: 100%;
-        height: 420px;
+        // height: 420px;
         background: url("./../images/pano.jpg") no-repeat center center;
         background-size: cover;
 
         .blogPage-banner-text {
-          width: 700px;
-          margin-left: 135px;
           padding-top: 50px;
-
+          padding-bottom: 50px;
           .blogPage-banner_big {
             font-family: FedraSans;
             font-weight: 700;
@@ -31,15 +28,14 @@
             font-variant-alternates: stylistic(1);
             font-size: 3em;
             color: #fff;
-            padding-top: 20px;
-            ;
+            padding: 20px 20px 0;
           }
 
           .blogPage-banner_small {
             font-family: Apercu;
             font-size: 1.2rem;
             color: rgba(255, 255, 255, 0.8);
-            padding: 0.5em 0 1em;
+            padding: 20px 20px 0;
           }
         }
       }
@@ -47,10 +43,6 @@
         width: 100%;
         padding-bottom: 20px;
         background-color: #dee3e7;
-        .blogPage-block {
-          width: 1200px;
-          margin: 0 auto;
-        }
       }
     }
   }
