--- a/src/page/Hero/scss/hero.scss
+++ b/src/page/Hero/scss/hero.scss
@@ -7,7 +7,7 @@
     background: #64cccb;
     background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#336799),color-stop(1,#64cccb));
     .heroPage-title {
-      width: 1200px;
+      // width: 1200px;
       margin: 0 auto;
       text-align: center;
       padding-top: 3em;
@@ -28,7 +28,7 @@
     }
   }
   .heroPage-main {
-    width: 1200px;
+    // width: 1200px;
     margin: 0 auto;
     overflow: hidden;
     padding-top: 20px;
