--- a/src/component/MyBlog/scss/myBlog.scss
+++ b/src/component/MyBlog/scss/myBlog.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding-top: 10px;
   .myBlog-main {
-    width: 100%;
+    width: 100% !important;
     margin: 20px auto 0;
     position: relative;
   }
