--- a/src/page/Artical/scss/articalPage.scss
+++ b/src/page/Artical/scss/articalPage.scss
@@ -1,7 +1,7 @@
 .articalPage {
   background-color: #dee3e7;
   .articalPage-main {
-    padding: 70px 0;
+    // padding: 70px 0;
     .articalPage-content {
       // max-width: 1200px;
       margin: 0 auto;
@@ -28,7 +28,7 @@
         }
       }
       .articalPage-content-text {
-        padding: 5em 8em;
+        padding: 5em 0em;
       }
     }
   }
