--- a/src/component/Header/scss/header.scss
+++ b/src/component/Header/scss/header.scss
@@ -31,8 +31,12 @@
       right: 0;
       top: 0;
       bottom: 0;
-      z-index: 1;
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255,255,255,0.5);
+      height: auto;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.5 ease;
+      transform: translateY(-20px);
 
       .nav-mask-list {
         background-color: #fff;
@@ -49,9 +53,19 @@
           font-size: 14px;
           transition: all .2s linear;
           text-decoration: none;
+          &:hover {
+            color: #ff9800;
+          }
         }
       }
     }
+    .nav-mask-show {
+      visibility: visible;
+      opacity: 1;
+      transform: translateY(0);
+      transition: all 0.5s ease;
+    }
+
   }
 
   .headerPage {
@@ -63,7 +77,7 @@
     right: 0;
     z-index: 9;
     transition: all 0.3s;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 0 5px rgba(0, 0, 0, .4);
 
     .headerPage-header {
@@ -75,7 +89,7 @@
           line-height: 60px;
           float: left;
           color: #fff;
-          margin-right: 30px;
+          margin-right: 10px;
           padding: 0 20px;
           position: relative;
           cursor: default;
