--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -3,7 +3,7 @@
   float: left;
   box-sizing: border-box;
   transition: all 0.4s;
-  animation: fadeInLeft 0.5 ease;
+  // animation: fadeInLeft 0.5 ease;
   cursor: pointer;
   &:hover {
     box-shadow: 5px 10px 10px -5px rgba(0,0,0,.2);
