--- a/src/layout.css
+++ b/src/layout.css
@@ -7,6 +7,10 @@
   .headerPage {
     display: block;
   }
+
+  .nav-mask {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1250px) {
@@ -17,6 +21,10 @@
 
   .headerPage {
     display: block;
+  }
+
+  .nav-mask {
+    display: none;
   }
 }
 
@@ -29,6 +37,10 @@
   .headerPage {
     display: block;
   }
+
+  .nav-mask {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -36,15 +48,16 @@
     width: 100%;
     margin: 0 auto;
   }
+  .grid-box {
+    width: 100%;
+  }
 
   .headerPage {
     display: none;
   }
-}
 
-@media screen and (max-width: 650px) {
-  .grid-box {
-    width: 100%;
+  .nav-mask {
+    display: block;
   }
 }
 
