--- a/src/component/MyBlog/scss/blogItem.scss
+++ b/src/component/MyBlog/scss/blogItem.scss
@@ -2,8 +2,9 @@
   padding: 5px;
   float: left;
   box-sizing: border-box;
-  transition: all 0.4s;
-  // animation: fadeInLeft 0.5 ease;
+  // transition: all 0.4s;
+  animation: fadeInLeft 1s;
+  -webkit-animation: fadeInLeft 1s;
   cursor: pointer;
   &:hover {
     box-shadow: 5px 10px 10px -5px rgba(0,0,0,.2);
@@ -71,5 +72,16 @@
        font-size: 12px;
      }
     }
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
