--- a/src/page/Artical/scss/articalPage.scss
+++ b/src/page/Artical/scss/articalPage.scss
@@ -13,8 +13,8 @@
         background-color: burlywood;
         position: relative;
         .articalPage-content-banner_title {
+          padding: 0 2em;
           position: absolute;
-          left: 5em;
           top: 5em;
           h1 {
             margin-bottom: 0.5em;
