--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 html,
 body {
-  /* width: 100%;
-  height: 100%; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,13 +8,12 @@ body {
   font-family: PingFang SC,Helvetica neue,Helvetica,Tahoma,lantinghei sc,Microsoft Yahei,sans-serif;
   -webkit-font-smoothing: antialiased;
 }
-
+* {
+  box-sizing: border-box;
+}
 #root {
-  /* width: 100%;
-  height: 100%; */
   margin: 0 auto;
   box-sizing: border-box;
-  /* overflow: auto; */
 }
 
 ul {
