--- a/src/component/Header/scss/header.scss
+++ b/src/component/Header/scss/header.scss
@@ -31,15 +31,12 @@
       right: 0;
       top: 0;
       bottom: 0;
-      z-index: 1;
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255,255,255,0.5);
+      height: auto;
       visibility: hidden;
-      // display: none;
-      // opacity: 0;
-      // height: 0;
-      transition: all 0.5s;
-      // display: none;
-      // animation: sliderDown 0.5s linear;
+      opacity: 0;
+      transition: all 0.5 ease;
+      transform: translateY(-20px);
 
       .nav-mask-list {
         background-color: #fff;
@@ -173,13 +170,13 @@
 
   @keyframes sliderDown {
     0% {
-      // height: 0;
+      height: 0;
       opacity: 0;
     }
 
     100% {
-      // height: auto;
-      opacity: 1;
+      height: auto;
+      opacity: 0;
     }
   }
 }
