--- a/src/page/AboutMe/scss/about.scss
+++ b/src/page/AboutMe/scss/about.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   // min-width: 1200px;
   overflow: auto;
+
   .aboutPage-banner-fixed {
     position: absolute;
     width: 100vw;
@@ -18,16 +19,25 @@
     bottom: 0;
     z-index: -50;
   }
+
   .aboutPage-main {
     // width: 100%;
     // min-width: 1200px;
     margin: 0 auto;
+
     .aboutPage-main-header {
       width: 100%;
       height: 500px;
-      // min-width: 1200px;
-      background-color: rgba(0,0,0,0.7);
+      background-color: rgba(0, 0, 0, 0.7);
       position: relative;
+
+      .aboutPage-main-header-back {
+        color: #fff;
+        position: absolute;
+        left: 5px;
+        top: 5px;
+      }
+
       .aboutPage-main-header_content {
         position: absolute;
         width: 500px;
@@ -37,6 +47,7 @@
         margin-left: -250px;
         margin-top: -60px;
         text-align: center;
+
         .aboutPage-main-header_content_avatar {
           width: 60px;
           height: 60px;
@@ -46,6 +57,7 @@
           box-shadow: 0 0 2px #333;
           position: relative;
           margin: 0 auto;
+
           img {
             width: 100%;
             height: 100%;
@@ -58,13 +70,14 @@
             width: 100%;
             height: 100%;
             left: 0;
-            right: 0; 
+            right: 0;
             top: 0;
             bottom: 0;
             animation: waterWave 4s ease-out 2s infinite;
             border: 1px solid #333;
             box-shadow: 0 0 2px #333;
           }
+
           &::after {
             position: absolute;
             content: "";
@@ -80,6 +93,7 @@
             box-shadow: 0 0 2px #333;
           }
         }
+
         .aboutPage-main-header_content_desc {
           color: #999;
           // text-shadow: 0 0 1px rgba(255,255,255,0.95);
@@ -87,27 +101,31 @@
         }
       }
     }
+
     .aboutPage-main-content {
       width: 100%;
       // min-width: 1200px;
-      background-color: rgba(241,241,241,0.6);
+      background-color: rgba(241, 241, 241, 0.6);
       padding: 20px;
       box-sizing: border-box;
+
       .aboutPage-main-content-me {
         margin: 0 auto;
         background-color: #fff;
         padding: 20px;
-        font-family: Helvetica,STHeiti STXihei,Microsoft JhengHei,Microsoft YaHei,Tohoma,Arial;
+        font-family: Helvetica, STHeiti STXihei, Microsoft JhengHei, Microsoft YaHei, Tohoma, Arial;
 
         .aboutPage-main-content-me_title {
           color: #4c4c4c;
-          font-size: 20px;        
-          font-family: Helvetica,STHeiti STXihei,Microsoft JhengHei,Microsoft YaHei,Tohoma,Arial;
+          font-size: 20px;
+          font-family: Helvetica, STHeiti STXihei, Microsoft JhengHei, Microsoft YaHei, Tohoma, Arial;
 
         }
+
         .aboutPage-main-content-me_desc {
           padding: 20px;
-          color:#757575;
+          color: #757575;
+
           p {
             margin: 20px 0;
           }
@@ -121,9 +139,11 @@
       transform: scale(1);
       opacity: 0;
     }
+
     50% {
       opacity: 1;
     }
+
     100% {
       transform: scale(1.6);
       opacity: 0;
