--- a/src/page/Hero/scss/heroItem.scss
+++ b/src/page/Hero/scss/heroItem.scss
@@ -23,7 +23,7 @@
   }
   .nickname {
     padding: 15px 10px 15px 100px;
-    height: 40px;
+    // height: 40px;
     line-height: 40px;
     font-size: 16px;
   }
