--- a/src/page/Artical/scss/articalPage.scss
+++ b/src/page/Artical/scss/articalPage.scss
@@ -29,7 +29,7 @@
         filter: blur(1px);
       }
         .articalPage-content-banner_title {
-          padding: 0 2em;
+          padding: 0 10%;
           position: absolute;
           top: 5em;
           h1 {
@@ -45,7 +45,7 @@
         }
       }
       .articalPage-content-text {
-        padding: 5em 8em;
+        padding: 5em 10%;
         font-size: 16px;
         line-height: 1.8em;
       }
