--- a/src/component/Pagination/scss/pagination.scss
+++ b/src/component/Pagination/scss/pagination.scss
@@ -1,6 +1,7 @@
 .pagination {
   display: flex;
   align-items: center;
+  justify-content: center;
   .pagination-prev {
     min-width: 32px;
     height: 32px;
