--- a/src/page/IndexPage/scss/indexPage.scss
+++ b/src/page/IndexPage/scss/indexPage.scss
@@ -1,7 +1,7 @@
 .indexPage {
   width: 100vw;
   height: 100vh;
-  background: url("./../images/banner.jpg") no-repeat top center;
+  background: url("./../images/bg.jpg") no-repeat top center;
   background-size: cover; 
   position: relative;
   .indexPage_cover {
@@ -11,22 +11,25 @@
     bottom: 0;
     left: 0;
     z-index: 0;
-    background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.1) 20%, rgba(0, 0, 0, 0.9));
-    background-color: rgba(68, 68, 68, 0.3);
+    background-image: linear-gradient(140deg,rgba(68, 68, 68, 0.1) 20%, rgba(0, 0, 0, 0.2));
+    background-color: rgba(68, 68, 68, 0.1);
   }
   .indexPage_title {
     height: 240px;
     position: absolute;
     left: 0;
     right: 0;
-    top: 50%;
+    top: 40%;
     margin: -120px auto 0;
     text-align: center;
     z-index: 1;
     color: #fff;
-    padding: 0 100px;
+    padding: 0 10%;
     .indexPage_title_cn {
       font-size: 20px;
+    }
+    .indexPage_title_en {
+      font-size: 16px;
     }
     .indexPage_jump {
       margin-top: 50px;
