--- a/src/page/Comment/scss/comment.scss
+++ b/src/page/Comment/scss/comment.scss
@@ -10,7 +10,7 @@
     background-size: cover;
     .commentPage-chat {
       margin: 0 auto;
-      padding-top: 100px;
+      padding: 100px 20px;
       .commentPage-chat-box {
         padding: 20px 20px 20px 20px;
         background: #fff;
