--- a/src/component/Modal/modal.scss
+++ b/src/component/Modal/modal.scss
@@ -18,6 +18,20 @@
     top: 40%;
     transform: translate3d(-50%, -50%, 0);
 
+    .modal-close {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 40px;
+      height: 36px;
+      text-align: center;
+      color: #ddd;
+      font: bold 20px/36px "simsun";
+      transition: 0.1s;
+      cursor: pointer;
+    }
+
     .modal-title {
       text-align: center;
       font-size: 18px;
