--- a/src/page/Comment/scss/comment.scss
+++ b/src/page/Comment/scss/comment.scss
@@ -1,6 +1,7 @@
 .commentPage {
   width: 100%;
   background-color: #f4f4f4;
+  padding-bottom: 20px;
   .commentPage-banner {
     width: 100%;
     height: 500px;
@@ -67,6 +68,10 @@
             padding: 0 20px;
             float: right;
             outline: none;
+            &:hover {
+              cursor: pointer;
+              opacity: 0.8;
+            }
           }
         }
       }
@@ -80,12 +85,13 @@
       background-color: #fff;
       overflow: hidden;
       margin: 0 auto;
-      padding-bottom: 20px;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
+      padding-right: 20px;
       .commentPage-content-l {
         // width: 800px;
+        flex: 1;
         float: left;
         padding-top: 20px;
       }
