--- a/src/component/Pagination/scss/pagination.scss
+++ b/src/component/Pagination/scss/pagination.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px 0;
   .pagination-prev {
     min-width: 32px;
     height: 32px;
