--- a/src/component/Header/scss/header.scss
+++ b/src/component/Header/scss/header.scss
@@ -85,6 +85,7 @@
       margin: 0 auto;
 
       .headerPage-header_list {
+        margin: 0;
         li {
           line-height: 60px;
           float: left;
