--- a/src/common/Modal/modal.scss
+++ b/src/common/Modal/modal.scss
@@ -6,7 +6,8 @@
   right: 0;
   bottom: 0;
   opacity: 1;
-  z-index: 999;
+  z-index: 99;
+
 
   .modal-body {
     background-color: #fff;
@@ -16,7 +17,8 @@
     position: absolute;
     left: 50%;
     top: 40%;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%);
+    animation: fadeIn 0.5s ease-in-out;
 
     .modal-close {
       display: block;
@@ -71,5 +73,17 @@
         outline: none;
       }
     }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -55%)
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%)
   }
 }
