--- a/src/page/Artical/scss/articalPage.scss
+++ b/src/page/Artical/scss/articalPage.scss
@@ -48,6 +48,9 @@
         padding: 5em 10%;
         font-size: 16px;
         line-height: 1.8em;
+        img {
+          width: 100%;
+        }
       }
     }
   }
